--- a/osa4/blogilistabackend/package.json
+++ b/osa4/blogilistabackend/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test": "node --test"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
