--- a/osa4/blogilistabackend/package.json
+++ b/osa4/blogilistabackend/package.json
@@ -7,13 +7,16 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index.js",
-    "test": "node --test"
+    "dev": "cross-env NODE_ENV=development node --watch index.js",
+    "test": "cross-env  NODE_ENV=test node --test",
+    "start": "cross-env NODE_ENV=production node index.js"
   },
   "dependencies": {
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lodash": "^4.17.23",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "supertest": "^7.2.2"
   }
 }
