--- a/osa4/blogilistabackend/package.json
+++ b/osa4/blogilistabackend/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jest": "^30.2.0",
     "lodash": "^4.17.23",
     "mongoose": "^9.1.5",
     "supertest": "^7.2.2"
